Exames.php pronta, href's corrigidos. +Settings
Co-authored-by: Enzo Hsu <Gallazival@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "workbench.editor.openPositioning": "right",
-    "workbench.sideBar.location": "right"
+  "workbench.editor.openPositioning": "right",
+  "workbench.sideBar.location": "right",
+  "editor.formatOnSave": true,
+  "files.insertFinalNewline": false
 }
